--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
     <div class="footer_img">
       <!-- <img src="asset/home/footer_img.png" alt=""> -->
       <!-- <video id="video" src="asset/home/footer-1.mp4" autoplay loop></video> -->
-      <video loop muted autoplay="atuoplay">
+      <video autoplay="atuoplay" loop muted playsinline>
         <source src="asset/home/footer-1.mp4" type="video/mp4">
       </video>
 
