--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
     <div class="footer_img">
       <!-- <img src="asset/home/footer_img.png" alt=""> -->
       <!-- <video id="video" src="asset/home/footer-1.mp4" autoplay loop></video> -->
-      <video autoplay="atuoplay" loop muted playsinline>
+      <video autoplay="atuoplay" loop muted >
         <source src="asset/home/footer-1.mp4" type="video/mp4">
       </video>
 
@@ -822,7 +822,7 @@
 
 
   <!-- //Organisations We Serve  & animated text-->
-  <!-- <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.5.0/glide.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
     integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
@@ -833,27 +833,27 @@
   <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
 
-  <script src="js/script.js"></script> -->
+  <script src="js/script.js"></script>
   <script>
     //   Organisations slider
-    // const config = {
-    //   type: 'carousel',
-    //   startAt: 0,
-    //   perView: 4,
-    //   gap: 10,
-    //   breakpoints: {
-    //     1480: {
-    //       perView: 3,
-    //     },
-    //     1024: {
-    //       perView: 2,
-    //     },
-    //     768: {
-    //       perView: 1,
-    //     }
-    //   }
-    // }
-    // new Glide('.glide', config).mount()
+    const config = {
+      type: 'carousel',
+      startAt: 0,
+      perView: 4,
+      gap: 10,
+      breakpoints: {
+        1480: {
+          perView: 3,
+        },
+        1024: {
+          perView: 2,
+        },
+        768: {
+          perView: 1,
+        }
+      }
+    }
+    new Glide('.glide', config).mount()
 
   </script>
 </body>
